<resources>
    <string name="app_name">DontWasteIt</string>
    <string name="placeName">placename</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="msg_vendres_des_pr">Vendez vos produits</string>
    <string name="msg_que_voulez_fair">Que souhaitez-vous faire ?</string>
    <string name="msg_acheter_des_pro">Achetez des produits</string>
    <string name="lbl_market_place2">Market Place</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="accueil">Accueil</string>
    <string name="contact">Contact</string>
    <string name="polytech">Polytech</string>
    <string name="a_propos">À propos</string>
    <string name="title_activity_test">testActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="imggpsgranted">imgGpsGranted</string>
    <string name="imggpsactivated">imgGpsActivated</string>
    <string name="se_connecter">Se connecter</string>
    <string name="annuler">Annuler</string>
    <string name="name">Nom</string>
    <string name="login_text">Pour vous connecter, merci de rentrer les informations suivantes:</string>
    <string name="back">Retour</string>
    <string name="login">Connexion</string>
    <string name="password">Mot de passe</string>
    <string name="email_address">Adresse email</string>
    <string name="about">A propos</string>
    <string name="home">Accueil</string>
    <string name="register_text">Pour vous inscrire, veuillez remplir les champs ci-dessous:</string>
    <string name="firstname">Prénom</string>
    <string name="confirm_password">Confirmer le mot de passe</string>
    <string name="welcome">Bienvenue</string>
    <string name="toLogin">Se connecter</string>
    <string name="createAnAccount">Créer un compte</string>
    <string name="welcomeMessage">Vous en avez marre de gaspiller votre nourriture? Grâce à cette application, gérer le dosage, vos inventaires, vendez certains aliments, découvrez de nouvelles recettes et soyez alerté si un de vos produits va bientôt périmer !</string>
    <string name="register">S\'inscrire</string>
    <string name="registerTitle">Inscription</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="img_product">img_product</string>
    <string name="ajouter_un_produit">Ajouter un produit</string>
    <string name="scanner">Scanner</string>
    <string name="nom_du_produit">Nom du produit</string>
    <string name="date_p">Date de péremption (ex 01/01/2023)</string>
    <string name="quantit_nombre_de_paquet">quantité (nombre de paquet)</string>
    <string name="ajouter">AJOUTER</string>
    <string name="my_inventories">Mes Inventaires</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="register_password">Mots de passe différent, merci de re-essayer…</string>
    <string name="register_mail">Email deja utilisé, merci de re-essayer…</string>
    <string name="login_incorrect">Identifiants incorrecte, merci de réessayer...</string>
    <string name="login_correct">Identifiants correcte, redirection vers le menu...</string>
    <string name="register_success">Vous êtes inscrit, redirection vers le menu...</string>
    <string name="loading">Chargement en cours, merci de patienter</string>
    <string name="session_restore">Restoration de la session</string>
    <string name="session_error">Session échoué, veuillez vous reconnecter</string>
    <string name="new_inventory">Envie d\'un nouvel inventaire?</string>
    <string name="inventory_name">Nom de l\'inventaire</string>
    <string name="share_inventory">Partager l\'inventaire?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="expiry">Valide jusqu\'au</string>
    <string name="create_inventory">Créer l\'inventaire</string>
    <string name="add">Ajouter</string>
    <string name="contact_msg">Des remarques, avis, suggestions ?\nN\'hésitez pas à nous contacter via l\'adresse ci-dessous.\nNotre équipe se fera un plaisir de vous répondre dans les plus brefs délais !</string>
    <string name="support_mail">support@dontWasteIt.com</string>
</resources>