<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SelectedInventory"
    android:orientation="vertical">

    <fragment
        android:id="@+id/frag_product_list"
        android:name="edu.polytech.repo_ihm.fragments.ProductListFragment"
        android:layout_width="match_parent"
        android:layout_height="360dp"

        />


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/ajouter_un_produit"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center_horizontal">

    </TextView>

    <Button
        android:id="@+id/b_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scanner" />

    <EditText
        android:id="@+id/et_name_product_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nom_du_produit"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_product_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_p"
        android:inputType="datetime"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_product_qty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantit_nombre_de_paquet"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:autofillHints="" />

    <Button
        android:id="@+id/b_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ajouter" />

</LinearLayout>