<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.Repoihm.DefaultPadding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                style="@style/Theme.Repoihm.TitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login" />

            <TextView
                android:id="@+id/backButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/loginInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_text" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="32sp" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="email"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancelLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/annuler" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.75" />

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/se_connecter" />
            </LinearLayout>

        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/footer"
            android:name="edu.polytech.repo_ihm.fragments.AppFooterFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/fragment_app_footer">

        </androidx.fragment.app.FragmentContainerView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>