<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/footer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    tools:context=".AppFooterFragment"

    >

    <Button
        android:id="@+id/homeButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/lato"
        android:padding="10sp"
        android:text="@string/home"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <Button
        android:id="@+id/contactButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/lato"
        android:padding="10sp"
        android:text="@string/contact"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <Button
        android:id="@+id/polytechButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/lato"
        android:padding="10sp"
        android:text="@string/polytech"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <Button
        android:id="@+id/aboutButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/lato"
        android:padding="10sp"
        android:text="@string/about"
        android:textColor="@color/black"
        android:textSize="12sp" />


</LinearLayout>