<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.Repoihm.DefaultPadding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                style="@style/Theme.Repoihm.TitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome" />

            <TextView
                android:id="@+id/backButtonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center|center_vertical"
            android:orientation="vertical"
            tools:ignore="InefficientWeight">

            <TextView
                android:id="@+id/loginInfo"
                android:layout_width="244dp"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/welcomeMessage"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="64sp" />

            <Button
                android:id="@+id/gotoLoginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16sp"
                android:text="@string/toLogin"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="64sp" />

            <Button
                android:id="@+id/gotoRegisterButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16sp"
                android:text="@string/createAnAccount"
                android:textSize="20sp" />

        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/footer"
            android:name="edu.polytech.repo_ihm.fragments.AppFooterFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/fragment_app_footer">

        </androidx.fragment.app.FragmentContainerView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>