<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MarketPlace">

    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearAndroidLarge"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" >
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearFrame"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:layout_width="match_parent" android:orientation="vertical">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearFrame15"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="vertical">

                <TextView
                    android:id="@+id/txtMarketPlace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="120dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="Market Place"
                    android:textAllCaps="true"
                    android:textSize="20dp"
                    tools:text="@string/lbl_market_place2" />

                <Button
                    android:id="@+id/returnToHomePageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"
                    android:onClick="returnHomePage"
                    android:text="Retour" />

                <LinearLayout android:gravity="start"
                    android:id="@+id/linearBack"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_width="match_parent" android:orientation="horizontal">

                </LinearLayout>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtQueVoulezFair"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="109dp"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="Que souhaitez-vous faire ?"
                android:textAllCaps="true"
                tools:text="@string/msg_que_voulez_fair"/>
            <androidx.appcompat.widget.AppCompatButton
                android:clickable="true" android:ellipsize="end"
                android:gravity="center"
                android:id="@+id/btnVendresDespr"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="18dp"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/msg_vendres_des_pr"
                android:textAllCaps="false"
                tools:text="@string/msg_vendres_des_pr"/>
            <androidx.appcompat.widget.AppCompatButton
                android:clickable="true" android:ellipsize="end"
                android:gravity="center"
                android:id="@+id/btnAcheterDespro"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="109dp"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/msg_acheter_des_pro"
                android:textAllCaps="false"
                tools:text="@string/msg_acheter_des_pro"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearFooter"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="109dp"
                android:layout_width="match_parent"
                android:orientation="horizontal">

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

